codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup_zai_flash_provider.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Z.AI API key

  OpenAI  Ambient  Corbanu API  Kimi Code  [Z.AI]  DeepSeek  Claude Plan  Anthropic  Meta  Vercel
  Baseten  OpenRouter

› 1. Z.AI GLM 5.3 Flash (current)  Model: glm-5.3-flash. Native multimodal GLM 5.3 Flash through
                                   the Z.AI API, billed per token; mandatory thinking, with low/
                                   high/max effort.
  2. Z.AI GLM 5.3                  Model: glm-5.3. GLM 5.3 through the Z.AI API, billed per token.
  3. Z.AI GLM 5.2                  Model: glm-5.2. GLM 5.2 through the Z.AI API, billed per token.

  Use Left/Right to switch providers. Press Enter to confirm or Esc to go back
